# resume

./: .gitignore  Cargo.toml  README.md  resume.yaml.example
src/: changelog.rs  cli.rs  config.rs  conventional_message.pest  error.rs  main.rs  message.rs  project.rs  report.rs  snapshots.rs  utils.rs
