[package]
name = "resume"
version = "0.1.0"
edition = "2018"

[dependencies]
blake3 = "1.0.0"
clap = "3.0.0-beta.2"
git2 = "0.13.20"
indexmap = { version = "1.7.0", features = ["serde"] }
indicatif = "0.16.2"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
simple_logger = { version = "1.13.0", features = ["stderr"] }

[profile.release]
opt-level = 3
lto = "thin"
